@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020220111"
-#define public MagickPackageReleaseDate "snapshot-20220111"
+#define public MagickPackageVersionAddendum ".020220112"
+#define public MagickPackageReleaseDate "snapshot-20220112"
