@@ -35,6 +35,14 @@
 <div class="document">
 
 
+<p>2022-01-12  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<p>* magick/blob.c (ReadBlob): Fix EOF logic. Addresses oss-fuzz
+43490 &quot;graphicsmagick:coder_PNM_fuzzer: Use-of-uninitialized-value
+in SyncImageCallBack&quot;.</p>
+<p>* coders/pnm.c (ReadPNMImage): Make sure that we don't lose the
+image exception.</p>
+</blockquote>
 <p>2022-01-11  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <p>* magick/blob.c: Throw a user-friendly exception when the read
